--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first food blog</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
-<body style="background-color: #f0ffff; font-family: Arial, Helvetica, sans-serif;">
+<body>
     <header>
-        <h1 style="color:#1e90ff;text-align:center;">My favourite eats in Malmö</h1>
+        <h1>My favourite eats in Malmö</h1>
         <nav>
             <ul>
                 <li><a href="#intro">Introduction</a></li>
@@ -18,7 +19,7 @@
                 <li><a href="#vastergatan">Västergatan</a></li>
             </ul>
         </nav>
-         <p>&#127813;&#127814;&#129361;&#129362;&#129365;&#129382;
+        <p>&#127813;&#127814;&#129361;&#129362;&#129365;&#129382;
     &#127813;&#127814;&#129361;&#129362;&#129365;&#129382; 
     &#127813;&#127814;&#129361;&#129362;&#129365;&#129382;
     &#127813;&#127814;&#129361;&#129362;&#129365;&#129382; 
@@ -30,58 +31,58 @@
     </header>
     <main>
         <section id="intro">
-             <p>Hi! My name is Megumi and I am currently living in Malmö, Sweden. 
-        I am a <s>Vegetarian</s> Flexitarian that likes to try new places to eat and
-        now would like to share some of my favourite places to eat in Malmö!
+             <p class="firstpara">Hi! My name is Megumi and I am currently living in Malmö, Sweden. 
+             I am a <s>Vegetarian</s> Flexitarian that likes to try new places to eat and
+             now would like to share some of my favourite places to eat in Malmö!
              </p>
         </section>
         <section id="julie">
-            <h3 style="color:#0091ff">&#127863;<u>If you&apos;re into wine: <a href="https://juliemalmo.se/"><b>Julie Vinbar</b></a></u></h3>
-            <p>Julie&apos;s Vinbar is located in Malmo&apos;s central area so we like to go here before our dinner or after dinner.
+            <h3>&#127863;<u>If you&apos;re into wine: <a href="https://juliemalmo.se/"><b>Julie Vinbar</b></a></u></h3>
+             <p class="secondpara">Julie&apos;s Vinbar is located in Malmo&apos;s central area so we like to go here before our dinner or after dinner.
              It has a great list of wine you can try out with very friendly staff that <i>know</i> their wine. 
              They also are connoisseurs of cheese and serve different cheese on a weekly basis so there&apos;s always something new to try. 
              Their ambience is 5/5 &#127775;.     
-            </p>
-             <br><span style="font-size: small;">Address: Tegelgårdsgatan 9, Malmö</span> 
-       </section>
-       <section id="kava">
-             <h3 style="color:#0091ff">&#9749;<u>If you want coffee and wine at the same time: <a href="https://kavamalmo.webnode.se/"><b>Kava</b></a></u></h3>
-             <p>There have been times on our weekend strolls when my sambo wants a beer, but I want to have a cup of coffee, 
+             </p>
+             <br><div>Address: Tegelgårdsgatan 9, Malmö</div> 
+        </section>
+        <section id="kava">
+            <h3>&#9749;<u>If you want coffee and wine at the same time: <a href="https://kavamalmo.webnode.se/"><b>Kava</b></a></u></h3>
+             <p class="secondpara">There have been times on our weekend strolls when my sambo wants a beer, but I want to have a cup of coffee, 
              and you&apos;d think it&apos;ll be a long shot to find a café that has <i><b>both</b></i> alcohol and a good cup of joe
              ... but we found Kava! Kava&apos;s owner was a sommelier while he also hired baristas that know their coffee.
              I enjoy going to this place as they have vegetarian menus, good coffee, and they also have great gluten-free vegan pastry. 
              It is also a study-friendly café with electrical outlets. Another plus is that it has the view of the St Peter&apos;s Church. 
              </p>
-            <br><span style="font-size: small;">Address: Göran Olsgatan 1, Malmö</span> 
+             <br><div>Address: Göran Olsgatan 1, Malmö</div> 
         </section>
         <section id="falafel">
-             <h3 style="color:#0091ff">&#129478;<u>Best Falafel: <a href="https://www.tripadvisor.com/Restaurant_Review-g189839-d8375887-Reviews-Falafel_Baghdad-Malmo_Skane_County.html"><b>Falafel Baghdad</b></a></u></h3>
-             <p>Malmo is known for their falafels, and it is difficult to choose the best falafel place out of many. 
+            <h3>&#129478;<u>Best Falafel: <a href="https://www.tripadvisor.com/Restaurant_Review-g189839-d8375887-Reviews-Falafel_Baghdad-Malmo_Skane_County.html"><b>Falafel Baghdad</b></a></u></h3>
+             <p class="secondpara">Malmo is known for their falafels, and it is difficult to choose the best falafel place out of many. 
              In my opinion, I believe Falafel Baghdad is a top contender in their falafel game. 
              Their falafel is not too greasy but juicy and they have a generous serving. 
              What makes their falafel amazing is the Iraqi bread and just the right amount of sauce they use. 
              </p>
-             <br><span style="font-size: small;">Address: Annelundsgaten 59, Malmö</span>
+             <br><div>Address: Annelundsgaten 59, Malmö</div>
         </section>
         <section id="sandwich">
-             <h3 style="color:#0091ff">&#129386;<u>Sandwich Extravaganza: <a href="https://www.scandwich.se/"><b>SCANDWICH</b></a></u></h3>
-             <p> Scandwich is a sandwich restaurant boasting with natural and organic wine list.
+            <h3>&#129386;<u>Sandwich Extravaganza: <a href="https://www.scandwich.se/"><b>SCANDWICH</b></a></u></h3>
+             <p class="secondpara"> Scandwich is a sandwich restaurant boasting with natural and organic wine list.
              They serve gourmet open sandwiches that are affordable and super tasty. 
              I say affordable as these sandwiches are huge with many ingredients that work well together.
              They have vegan and vegetarian options with their own pickled/fermented vegetables and cheese as generous toppings.
              They also have assortments of beer, wine and kombucha. They are also dog friendly!      
              </p>
-             <br><span style="font-size: small;">Address: Kristianstadsgatan 7B, Malmö </span>
+             <br><div>Address: Kristianstadsgatan 7B, Malmö </div>
         </section>
         <section id="vastergatan">
-             <h3 style="color:#0091ff">&#127869;<u>Casual yet fine dining: <a href="https://www.vastergatan.se/"><b>Västergatan</b></a></u></h3>
-             <p>If you like fine dining and creatively yet deliciously concocted dishes but hate the hoity toity vibe of some of the fine dining establishments, Västergatan is the place to go.
+            <h3>&#127869;<u>Casual yet fine dining: <a href="https://www.vastergatan.se/"><b>Västergatan</b></a></u></h3>
+             <p class="secondpara">If you like fine dining and creatively yet deliciously concocted dishes but hate the hoity toity vibe of some of the fine dining establishments, Västergatan is the place to go.
              Västergatan has a 600 SEK 4 course dining menu and you will not be disappointed!
              You&apos;d think green apple and mussels sound odd, but they taste amazing. 
              (This kind of restaurant is when I become a flexitarian). 
              The staff and the ambience are very laid back and cozy. 
-            </p>
-            <br><span style="font-size: small;">Address: 16 Vaestergatan, Malmö</span>
+             </p>
+             <br><div>Address: 16 Vaestergatan, Malmö</div>
         </section>
 
              <p>
@@ -101,7 +102,7 @@
              </p>  
 </main> 
 <!--Practicing how to insert comment-->
-<footer style="color:#1e90ff; text-align: center;">
+<footer>
     &#128031;&#128032; &#128031;&#128032;Assignment 1 &#129385; Megumi Ohara &#128031;&#128032; &#128031;&#128032;
 </footer>
     
